--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
        /* transform-origin: center; */
       }
       canvas {
+        background-image: url("noisy.png");
         background: #000000;
         display: block;
         margin: 0 auto;
