--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
       canvas {
         background-image: url("noisy.png");
-        background: #ffffff;
+        background: #0099ff;
         display: block;
         margin: 0 auto;
         height: 100vh;
