--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       const canvas = document.getElementById("myCanvas");
       const ctx = canvas.getContext("2d");
 
-
+      // Variables
 
       function drawSubR(subMoveAngle) { 
         clear();
