--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@
       }
 
 
+     // Draw
+      
+      for (i = 0; i < density; i++) {
+        if (randLand == "B") {
+          bC = Math.floor(Math.random() * 130 + 120;
+        } else if (randLand == "G") {
+          gC = Math.floor(Math.random() * 160 + 180;
+        }
+
+        ctx.beginPath();
+        ctx.moveTo(-16, -5);
+        ctx.lineTo(-8, -6);
+        ctx.lineTo(-12, -6);
+        ctx.lineTo(-10, -9);
+        ctx.lineTo(-4, -9);
+        ctx.fillStyle = "#91959c";
+        ctx.fill();
+        ctx.closePath();
+
+
+
 /////////////////////////////////////
 
 
