--- a/index.html
+++ b/index.html
@@ -66,12 +66,15 @@
           color = [70, Math.floor(Math.random() * 160 + 180, 0];
         }
         if (i % GridX != 0) {
+          j=i+1;
+          k=i+GridX;
+          l=k+1;
           ctx.beginPath();
           ctx.moveTo(vertices[2 * i], vertices[2*i+1]);
-          ctx.lineTo(-8, -6);
-          ctx.lineTo(-12, -6);
-          ctx.lineTo(-10, -9);
-          ctx.lineTo(-4, -9);
+          ctx.lineTo(vertices[2 * j)], vertices[2*j+1]);
+          ctx.lineTo(vertices[2 * l], vertices[2*l+1]);
+          ctx.lineTo(vertices[2 * k], vertices[2*k+1]);
+          ctx.lineTo(vertices[2 * i], vertices[2*i+1]);
           ctx.fillStyle = rgb(color[0],color[1],color[2]);
           ctx.fill();
           ctx.closePath();
