--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        /* transform-origin: center; */
       }
       canvas {
-        background: "#234567";
+        background: #234567;
         display: block;
         margin: 0 auto;
         height: 100vh;
