--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
       }
     </style>
   </head>
-  <body {
-  background-image: url("noise.png");
-}>
-    <canvas id="myCanvas" onmousedown="mDown()">Your browser cannot support this game.</canvas>
+  <body>
+    <canvas id="myCanvas">Your browser cannot support this game.</canvas>
     <script>
       const canvas = document.getElementById("myCanvas");
       const ctx = canvas.getContext("2d");
