--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           ctx.lineTo(verticesX[i+GridX+1], verticesY[i+GridX+1]);
           ctx.lineTo(verticesX[i+GridX], verticesY[i+GridX]);
           ctx.lineTo(verticesX[i], verticesY[i]);
-          ctx.fillStyle = rgb(color[0],color[1],color[2]);
+          ctx.fillStyle = rgb(29,30,21);
           ctx.fill();
           ctx.closePath();
         }
