--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       for (i = 0; i < density; i++) {
         randQX = Math.random() + i;
         randQY = Math.random() + i;
-        verticesX[i] = randQX*trueGridX;
-        verticesY[i] = randQY*trueGridY;
+        verticesX[i] = randQX;//*trueGridX;
+        verticesY[i] = randQY;//*trueGridY;
       };
 
 
