--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         };
       };
 
-      for (i = 0; i < density - GridX; i++) {
+      for (i = 0; i < density; i++) {
         if (LandArray[i] == "B") {
           ctx.fillStyle = "#3A72AB";
         } else if (LandArray[i] == "G") {
