--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         };
         randQX = Math.random() + m;
         randQY = Math.random() + k;
-        verticesX[i] = randQX;//*trueGridX;
-        verticesY[i] = randQY;//*trueGridY;
+        verticesX[i] = randQX*trueGridX;
+        verticesY[i] = randQY*trueGridY;
         m++;
       };
 
