--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       for (i = 0; i < density; i++) {
         if (LandArray[i] == "B") {
-          ctx.fillStyle = "#3A72AB";
+          ctx.fillStyle = "#264f78";
         } else if (LandArray[i] == "G") {
           ctx.fillStyle = "#11961E";
         };
