--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         };
       };
 
-      for (i = 0; i < density; i++) {
+      for (i = 0; i < density - GridX-1; i++) {
         if (LandArray[i] == "B") {
           ctx.fillStyle = "#264f78";
         } else if (LandArray[i] == "G") {
