--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       var LandArray = [];
       var verticesX =[];
       var verticesY = [];
-      var trueGridX = window.innerWidth/GridX;
-      var trueGridY = window.innerHeight/GridY;
+      var trueGridX = 400/GridX;// window.innerWidth/GridX;
+      var trueGridY = 400/GridY;
       var k = 0;
       var m = 0;
      
