--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
       for (i = 0; i < density - GridX-1; i++) {
         if (LandArray[i] == "B") {
-          ctx.fillStyle = "#264f78";
+          ctx.fillStyle = "#123456";
         } else if (LandArray[i] == "G") {
-          ctx.fillStyle = "#11961E";
+          ctx.fillStyle = "#345678";
         };
         drawQuads(i);
       };
